# OS-lab2

./: CMakeLists.txt  input.txt
examples/: Main.c
include/: cache.h  my_shell.h
src/: MyShell.c  cashe.c
