file(GLOB_RECURSE MONOLITH_SOURCES CONFIGURE_DEPENDS *.h *.c)

set(MONOLITH_LIB_SOURCES ${MONOLITH_SOURCES})

set(MONOLITH_APP_SOURCES examples/Main.c)

add_library(${PROJECT_NAME} STATIC ${MONOLITH_LIB_SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${MONOLITH_INCLUDE_PATH})


add_executable(${PROJECT_NAME}-app ${MONOLITH_APP_SOURCES})
set_property(TARGET ${PROJECT_NAME}-app PROPERTY OUTPUT_NAME ${PROJECT_NAME})

target_link_libraries(
    ${PROJECT_NAME}-app PRIVATE
    ${PROJECT_NAME}
)

